#32: Added enpoints to work on Portfolio